# glassses

./: .env  .env.example  .gitignore  AGENT_GUIDE.md  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  server_final.py  test_openai.py
.pytest_cache/v/cache/: nodeids
esp32参考资料/: stm32.md
example/: compile.ino
services/: __init__.py  api_docs.py  audio_service.py  camera_service.py  config.py  microphone_service.py  omni_service.py  state.py  vision_service.py  voice_assistant.py
static/: app.js  style.css
stm32code/: code.md  esp32_firmware_mic.ino  speaker.cpp  speaker.h
templates/: index.html
tests/: __init__.py  test_frontend.py  test_state.py  test_vision_service.py
